--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,24 @@
     <string name="app_name">Fast CheckOut Library</string>
     <string name="title_activity_user_account">UserAccount</string>
     <string name="title_activity_user_search_main_menu">UserSearchMainMenu</string>
+
+    <string name="country_prompt">Choose a country</string>
+    <string-array name="country_arrays">
+        <item>Argentina</item>
+        <item>Brazil</item>
+        <item>Canada</item>
+        <item>Colombia</item>
+        <item>Denmark</item>
+        <item>Dominican Republic</item>
+        <item>England</item>
+        <item>Germany</item>
+        <item>Italy</item>
+        <item>Japan</item>
+        <item>Mexico</item>
+        <item>Portugal</item>
+        <item>Spain</item>
+        <item>United States</item>
+        <item>Venezuela</item>
+    </string-array>
+
 </resources>
